Media Querry added

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@700&family=Open+Sans:wght@400;700;800&family=Source+Sans+3:wght@700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@500;700&family=Open+Sans:wght@400;700;800&family=Source+Sans+3:wght@700&display=swap"
       rel="stylesheet"
     />
     <title>404 not found</title>
@@ -23,18 +23,22 @@
     <main>
       <div class="container">
         <div class="img-container">
-          <img class="scare-img" src="Scarecrow.png" alt="Scarecrow">
+          <img class="scare-img" src="Scarecrow.png" alt="Scarecrow" />
         </div>
         <div class="info-container">
           <h2 class="container-title">I have bad news for you</h2>
           <p class="container-description">
-            The page you are looking for might be removed or is temporarily unavailable
+            The page you are looking for might be removed or is temporarily
+            unavailable
           </p>
-          <button class="btn">
-            Back to homepage
-          </button>
+          <button class="btn">Back to homepage</button>
         </div>
       </div>
     </main>
+    <footer>
+      <div class="foot">
+        <p>created by <span class="name">Shariful Islam</span>  - devChallenges.io</p>
+      </div>
+    </footer>
   </body>
 </html>
